<resources>
    <string name="app_name">e-auksion</string>
    <string name="yuklanmoqda">Loading…</string>
    <string name="todo">TODO</string>
    <string name="tartiblash">Tartiblash</string>

    <string-array name="davlat_aktivlari">
        <item>Davlat aktivlari</item>
        <item>Davlat mulkini ijaraga berish</item>
        <item>Dehqon xo\'jaligi yerlar ijarasi</item>
        <item>Ko\'chmas mulk</item>
        <item>Avtomototransport</item>
        <item>Yer uchastkalari</item>
        <item>Yer qari uchastkasidan foydalanish huquqi</item>
        <item>Tashqi reklama obyektlari</item>
        <item>Daryolar o\'zanlarini tozalash</item>
        <item>Ko\'llar tizimi</item>
        <item>Maxsus texnikalar</item>
        <item>Buyurtmachilar mulklari</item>
        <item>Bankrotlik bo\'yicha</item>
        <item>Hududlarni tozalash</item>
        <item>O\'zpaxtasanoat AJ</item>
        <item>Boshqa mol mulklar</item>
        <item>Radar va kameralar o\'rnatish joylari</item>
        <item>Statsionar shahobchalar o\'rnatish</item>
        <item>Havo kemalari</item>
        <item>Ko\'chmas savdo joylari</item>
        <item>Jamoatchilik nazorat maskanlari</item>
    </string-array>

    <string-array name="Mol_mulk_toifasi">
        <item>Mol Mulk toifasi</item>
    </string-array>

    <string-array name="viloyat">
        <item>Viloyat</item>
        <item>Viloyat</item>
        <item>Viloyat</item>
    </string-array>

    <string-array name="tuman">
        <item>Tuman</item>
    </string-array>

    <string-array name="sort">
        <item>Yangilaridan boshlab</item>
        <item>Eskilaridan boshlab</item>
        <item>Qimmatidan boshlab</item>
        <item>Arzonidan boshlab</item>
        <item>Maydoni kattasidan</item>
        <item>Maydoni kichigidan</item>
        <item>Ko\'p ko\'rilgan</item>
        <item>Kam ko\'rilgan</item>
    </string-array>
<string name="yangi">Yangilaridan boshlab</string>
<string name="eski">Eskilaridan boshlab</string>
<string name="qimmat">Qimmatidan boshlab</string>
<string name="arzon">Arzonidan boshlab</string>
<string name="katta">Maydoni kattasidan</string>
<string name="kichik">Maydoni kichigidan</string>
<string name="kup">Ko\'p ko\'rilgan</string>
<string name="kam">Kam ko\'rilgan</string>
    <string name="izlash">izlash</string>
    <string name="tozalash">tozalash</string>
    <string name="filtrlar">Filtrlar</string>
    <string name="lot">Lot №</string>
</resources>