<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:theme="@style/Theme.Design.Light">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="24dp"
                android:background="@color/white"
                app:layout_constraintLeft_toRightOf="@id/back"
                app:layout_constraintTop_toTopOf="parent"
                app:title="Izlash"
                app:titleTextColor="@color/black" />

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:contentDescription="@string/todo"
                android:focusable="true"
                android:src="@drawable/ic_back"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="8dp"
        android:backgroundTint="@color/white"
        app:cardCornerRadius="10dp"
        app:cardMaxElevation="10dp"
        app:cardUseCompatPadding="true"
        app:layout_constraintTop_toBottomOf="@id/appbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp">

            <TextView
                android:id="@+id/filtrlar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filtrlar"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/edittext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="Lot №"
                android:background="@null"
                android:hint="@string/lot"
                android:inputType="numberDecimal"
                android:padding="16dp"
                android:paddingVertical="16dp"
                app:layout_constraintTop_toBottomOf="@id/filtrlar" />

            <TextView
                android:id="@+id/groups_text"
                style="@style/select_text_style"
                android:text="@string/davlat_aktivlari"
                app:layout_constraintTop_toBottomOf="@id/edittext"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/category_text"
                style="@style/select_text_style"
                android:text="@string/mol_mulk_toifasi"
                app:layout_constraintTop_toBottomOf="@id/groups_text"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/region_text"
                style="@style/select_text_style"
                android:text="@string/viloyat"
                app:layout_constraintTop_toBottomOf="@id/category_text"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/area_text"
                style="@style/select_text_style"
                android:text="@string/tuman"
                app:layout_constraintTop_toBottomOf="@id/region_text"
                tools:ignore="MissingConstraints" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/tozalash"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/tozalash"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@id/card"
        app:layout_constraintRight_toLeftOf="@id/izlash"
        app:layout_constraintTop_toBottomOf="@id/card" />

    <Button
        android:id="@+id/izlash"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginHorizontal="12dp"
        android:text="@string/izlash"
        android:textColor="@color/black"
        app:layout_constraintLeft_toRightOf="@id/tozalash"
        app:layout_constraintRight_toRightOf="@id/card"
        app:layout_constraintTop_toBottomOf="@id/card" />
</androidx.constraintlayout.widget.ConstraintLayout>